--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -16,7 +17,17 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div id="wrapper">
+            <img src="img/logo.svg" />
+
+            <br />
+            <a class="button pledge" href="https://liquidshares.typeform.com/to/OfVYIA">PLEDGE</a>
+
+            <br />
+            <a class="button whitepaper" href="files/liquidshares-whitepaper.pdf">WHITEPAPER</a>
+
+        </div>
+
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
